@@ -1,5 +1,5 @@
 package Hadoop::Streaming::Role::Iterator;
-use Moose::Role;
+use Any::Moose qw(Role);
 
 requires qw(has_next next);
 #ABSTRACT: Role to require has_next and next
